indexer permissions, multithreading settings and other improvements.
 - implement permission system via netbeans notifications
 - multithreaded extraction setting for maven indexer options
 - better temp storage handling (extract directly to cache folder)
 - cancellation sets a timeout, pausing starts of other repo updates
 - 'update now' button should update everything and reset timeout
 - remove 'never' update frequency since it was replaced by
   a combination of other settings
 - replace some deprecated usages